# Capstone-Tricore-Testing

./: .gitmodules  CMakeLists.txt
src/: main.cpp
